<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/app_title" />
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginBottom="10dip"
            android:text="@string/app_subtitle" />
        <EditText android:id="@+id/url_txt"
            android:layout_width="fill_parent"
            android:singleLine = "true"
            android:layout_height="wrap_content"
            android:inputType="textUri"
            android:hint="@string/url_example" />
        <Button android:id="@+id/submit_btn"
                android:layout_width="140dip"
                android:layout_marginTop="6dip"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/submit_btn" />
    </LinearLayout>
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_alignParentBottom="true"
        android:autoLink="web"
        android:text="@string/powered_by" />
</RelativeLayout>
